--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,17 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: LocalAgentPool  # 🔁 Use your actual agent pool name
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'AzDevOp-DemoConnect'  # 🔁 Use your actual service connection name
+    scriptType: bash
+    scriptLocation: inlineScript
+    inlineScript: |
+      az deployment group create \
+        --resource-group 12thMan2 \
+        --template-file main.bicep \
+        --parameters @main.parameters.json
