--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
 - task: AzureCLI@2
   displayName: 'Deploy Bicep Template'
   inputs:
-    azureSubscription: 'AzureSP-12thMan2'  # 👈 Use the exact name of your service connection
+    azureSubscription: 'AzDevOp-DemoConnect'  # 👈 Use the exact name of your service connection
     scriptType: bash
     scriptLocation: inlineScript
     inlineScript: |
